feat: add basic auth form

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,8 +3,133 @@
     "edit": "Edit",
     "and": "and"
   },
-  "change-language": "change language",
-  "sign-in-button": "sign in",
-  "sign-out-button": "sign out",
-  "sign-up-button": "sign up"
+  "change-language": "Change language",
+  "sign-in-button": "Sign In",
+  "sign-out-button": "Sign Out",
+  "sign-up-button": "Sign Up",
+  "auth-form": {
+    "email": "Enter your email",
+    "password": "Enter your password",
+    "login": {
+      "submit": "Sign In"
+    },
+    "register": {
+      "submit": "Sign Up"
+    },
+    "validate": {
+      "required": "This field is required",
+      "email": {
+        "pattern": "Incorrect email"
+      },
+      "password": {
+        "pattern": "At least one letter, one digit, one special character",
+        "minLength": "Minimum {{count}} symbols"
+      }
+    }
+  },
+  "auth": {
+    "admin-restricted-operation": "admin restricted operation",
+    "argument-error": "argument error",
+    "app-not-authorized": "app not authorized",
+    "app-not-installed": "app not installed",
+    "captcha-check-failed": "captcha check failed",
+    "code-expired": "code expired",
+    "cordova-not-ready": "cordova not ready",
+    "cors-unsupported": "cors unsupported",
+    "credential-already-in-use": "credential already in use",
+    "custom-token-mismatch": "custom token mismatch",
+    "requires-recent-login": "requires recent login",
+    "dependent-sdk-initialized-before-auth": "dependent sdk initialized before auth",
+    "dynamic-link-not-activated": "dynamic link not activated",
+    "email-change-needs-verification": "email change needs verification",
+    "email-already-in-use": "email already in use",
+    "emulator-config-failed": "emulator config failed",
+    "expired-action-code": "expired action code",
+    "cancelled-popup-request": "cancelled popup request",
+    "internal-error": "internal error",
+    "invalid-api-key": "invalid api key",
+    "invalid-app-credential": "invalid app credential",
+    "invalid-app-id": "invalid app id",
+    "invalid-user-token": "invalid user token",
+    "invalid-auth-event": "invalid auth event",
+    "invalid-cert-hash": "invalid cert hash",
+    "invalid-verification-code": "invalid verification code",
+    "invalid-continue-uri": "invalid continue uri",
+    "invalid-cordova-configuration": "invalid cordova configuration",
+    "invalid-custom-token": "invalid custom token",
+    "invalid-dynamic-link-domain": "invalid dynamic link domain",
+    "invalid-email": "invalid email",
+    "invalid-emulator-scheme": "invalid emulator scheme",
+    "invalid-credential": "invalid credential",
+    "invalid-message-payload": "invalid message payload",
+    "invalid-multi-factor-session": "invalid multi factor session",
+    "invalid-oauth-client-id": "invalid oauth client id",
+    "invalid-oauth-provider": "invalid oauth provider",
+    "invalid-action-code": "invalid action code",
+    "unauthorized-domain": "unauthorized domain",
+    "wrong-password": "wrong password",
+    "invalid-persistence-type": "invalid persistence type",
+    "invalid-phone-number": "invalid phone number",
+    "invalid-provider-id": "invalid provider id",
+    "invalid-recipient-email": "invalid recipient email",
+    "invalid-sender": "invalid sender",
+    "invalid-verification-id": "invalid verification id",
+    "invalid-tenant-id": "invalid tenant id",
+    "multi-factor-info-not-found": "multi factor info not found",
+    "multi-factor-auth-required": "multi factor auth required",
+    "missing-android-pkg-name": "missing android pkg name",
+    "missing-app-credential": "missing app credential",
+    "auth-domain-config-required": "auth domain config required",
+    "missing-verification-code": "missing verification code",
+    "missing-continue-uri": "missing continue uri",
+    "missing-iframe-start": "missing iframe start",
+    "missing-ios-bundle-id": "missing ios bundle id",
+    "missing-or-invalid-nonce": "missing or invalid nonce",
+    "missing-multi-factor-info": "missing multi factor info",
+    "missing-multi-factor-session": "missing multi factor session",
+    "missing-phone-number": "missing phone number",
+    "missing-verification-id": "missing verification id",
+    "app-deleted": "app deleted",
+    "account-exists-with-different-credential": "account exists with different credential",
+    "network-request-failed": "network request failed",
+    "null-user": "null user",
+    "no-auth-event": "no auth event",
+    "no-such-provider": "no such provider",
+    "operation-not-allowed": "operation not allowed",
+    "operation-not-supported-in-this-environment": "operation not supported in this environment",
+    "popup-blocked": "popup blocked",
+    "popup-closed-by-user": "popup closed by user",
+    "provider-already-linked": "provider already linked",
+    "quota-exceeded": "quota exceeded",
+    "redirect-cancelled-by-user": "redirect cancelled by user",
+    "redirect-operation-pending": "redirect operation pending",
+    "rejected-credential": "rejected credential",
+    "second-factor-already-in-use": "second factor already in use",
+    "maximum-second-factor-count-exceeded": "maximum second factor count exceeded",
+    "tenant-id-mismatch": "tenant id mismatch",
+    "timeout": "timeout",
+    "user-token-expired": "user token expired",
+    "too-many-requests": "too many requests",
+    "unauthorized-continue-uri": "unauthorized continue uri",
+    "unsupported-first-factor": "unsupported first factor",
+    "unsupported-persistence-type": "unsupported persistence type",
+    "unsupported-tenant-operation": "unsupported tenant operation",
+    "unverified-email": "unverified email",
+    "user-cancelled": "user cancelled",
+    "user-not-found": "user not found",
+    "user-disabled": "user disabled",
+    "user-mismatch": "user mismatch",
+    "user-signed-out": "user signed out",
+    "weak-password": "weak password",
+    "web-storage-unsupported": "web storage unsupported",
+    "already-initialized": "already initialized",
+    "recaptcha-not-enabled": "recaptcha not enabled",
+    "missing-recaptcha-token": "missing recaptcha token",
+    "invalid-recaptcha-token": "invalid recaptcha token",
+    "invalid-recaptcha-action": "invalid recaptcha action",
+    "missing-client-type": "missing client type",
+    "missing-recaptcha-version": "missing recaptcha version",
+    "invalid-recaptcha-version": "invalid recaptcha version",
+    "invalid-req-type": "invalid request type"
+  }
 }
