feat: add translate welcome page

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -6,5 +6,28 @@
   "change-language": "поменять язык",
   "sign-in-button": "войти",
   "sign-out-button": "выйти",
-  "sign-up-button": "зарегистрироваться"
+  "sign-up-button": "зарегистрироваться",
+  "start": "Начать",
+  "teamSection": {
+    "title": "Наша команда",
+    "description": "Мы студенты RS School. Это финальный проект курса RS School React.",
+    "IliasovDamir": "Ильясов Дамир",
+    "BuhlakAlexandr": "Бухлак Александр",
+    "SavenkoMikhail": "Савенко Михаил",
+    "developer": "Frontend разработчик"
+  },
+  "startSection": {
+    "subTitle": "GraphiQL — это игровая площадка для запросов graphQL.",
+    "description": "GraphQL — это язык запросов для API и среда выполнения для выполнения этих запросов с вашими существующими данными. GraphQL предоставляет полное и понятное описание данных в вашем API, дает клиентам возможность запрашивать именно то, что им нужно, и ничего больше, упрощает развитие API с течением времени и предоставляет мощные инструменты разработчика.",
+    "columns": {
+      "name1": "Отправьте запрос GraphQL в свой API и получите именно то, что вам нужно, не больше и не меньше.",
+      "value1": "Запросы к серверу",
+      "name2": "В то время как типичные API REST требуют загрузки с нескольких URL-адресов, API GraphQL получают все данные, необходимые вашему приложению, в одном запросе.",
+      "value2": "Единый запрос",
+      "name3": "Добавляйте новые поля и типы в API GraphQL, не затрагивая существующие запросы.",
+      "value3": "Дополняйте свой API",
+      "name4": "Мобильные приложения Facebook работают на GraphQL с 2012 года. Теперь GraphQL доступен во многих средах.",
+      "value4": "Кто изпользует GraphQL?" 
+    }
+  }
 }
