--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -7,6 +7,7 @@
   "sign-in-button": "Sign In",
   "sign-out-button": "Sign Out",
   "sign-up-button": "Sign Up",
+  "graphi-ql-button": "GraphiQl",
   "auth-form": {
     "email": "Enter your email",
     "password": "Enter your password",
