--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -131,5 +131,12 @@
     "missing-recaptcha-version": "missing recaptcha version",
     "invalid-recaptcha-version": "invalid recaptcha version",
     "invalid-req-type": "invalid request type"
-  }
+  },
+  "headers": {
+    "caption": "Request headers",
+    "name": "Header name",
+    "value": "Header value",
+    "add": "Add new Header"
+  },
+  "response": "Response"
 }
