--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -131,5 +131,12 @@
     "missing-recaptcha-version": "отсутствует версия рекапчи",
     "invalid-recaptcha-version": "неверная версия рекапчи",
     "invalid-req-type": "неверный тип запроса"
-  }
+  },
+  "headers": {
+    "caption": "Заголовки запроса",
+    "name": "Имя заголовка",
+    "value": "Значение заголовка",
+    "add": "Добавить новый заголовок"
+  },
+  "response": "Ответ на запрос"
 }
