feat: create main page

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -138,5 +138,6 @@
     "value": "Header value",
     "add": "Add new Header"
   },
-  "response": "Response"
+  "response": "Response",
+  "request": "Request"
 }
