--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -138,5 +138,6 @@
     "value": "Значение заголовка",
     "add": "Добавить новый заголовок"
   },
-  "response": "Ответ на запрос"
+  "response": "Ответ на запрос",
+  "request": "Запрос"
 }
