--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -137,6 +137,13 @@
     "invalid-recaptcha-version": "неверная версия рекапчи",
     "invalid-req-type": "неверный тип запроса"
   },
+  "headers": {
+    "caption": "Заголовки запроса",
+    "name": "Имя заголовка",
+    "value": "Значение заголовка",
+    "add": "Добавить новый заголовок"
+  },
+  "response": "Ответ на запрос",
   "start": "Начать",
   "teamSection": {
     "title": "Наша команда",
